# corrode

./: .release-please-config.json  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml
src/corrode/: __init__.py  async_iterator.py  iterator.py  result.py
tests/: test_async_iterator.py  test_do.py  test_iterator.py  test_readme_blocks.py  test_result.py
tests/type_checking/: test_result.yml  typesafety.py
