[project]
name = "corrode"
version = "0.1.1"
description = "A Rust-like Result type for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Roman Kitaev", email = "802.11g@bk.ru" },
]
keywords = ["rust", "result", "error-handling", "enum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "typing_extensions>=4.10.0; python_version < '3.13'",
]

[project.urls]
Homepage = "https://github.com/deliro/corrode"
Repository = "https://github.com/deliro/corrode"
Issues = "https://github.com/deliro/corrode/issues"
Changelog = "https://github.com/deliro/corrode/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corrode"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-mypy-plugins>=3.0",
    "mypy>=1.0",
    "ruff>=0.8",
]

[tool.mypy]
packages = ["corrode"]
mypy_path = "src"
ignore_missing_imports = true
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D105",  # missing docstring in magic methods (__repr__, etc.)
    "D107",  # missing docstring in __init__
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    "TC003", # imports not behind TYPE_CHECKING — intentional throughout the project
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",     # type annotations not required in tests
    "D",       # docstrings not required in tests
    "E731",    # lambda assignments are fine in tests
    "EM101",   # string literals in exceptions are fine in tests
    "ERA001",  # section header comments are not commented-out code
    "PERF401", # manual list.append in loops is fine in tests
    "FBT",     # boolean positional args are fine in tests
    "PLR2004", # magic values are fine in tests
    "PT009",   # use of unittest-style assertEqual
    "S101",    # assert is fine in tests
    "S307",    # eval is fine in tests
    "SLF001",  # private member access is fine in tests
    "TRY003",  # long exception messages are fine in tests
]
"tests/type_checking/typesafety.py" = [
    "INP001",  # not a package, just a type-checking target
    "TC003",   # imports must be real, not behind TYPE_CHECKING
]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
include = ["src/corrode", "tests/type_checking/typesafety.py"]

[tool.ty.rules]
invalid-return-type = "ignore"        # false positive: except clause narrowing
unused-type-ignore-comment = "ignore" # conflicts with mypy's type: ignore

[tool.pytest.ini_options]
asyncio_mode = "auto"
